nodejs/kube/test-node-js.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs
  namespace: nethopper
  labels:
    app: test-nodejs
  annotations:
    nethopper.io/tag-edge: 'true'
spec:
  selector:
    matchLabels:
      app: test-nodejs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: test-nodejs
    spec:
      containers:
        - name: test-nodejs
          image: nethopper/test-nodejs:latest
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: test-nodejs
    app.kubernetes.io/part-of: argocd
  name: test-nodejs
  namespace: nethopper
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 5000
  selector:
    app: test-nodejs
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nodejs
  namespace: nethopper
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - test-nodejs.munford.mynethopper.net
      secretName: test-nodejs-tls
  rules:
    - host: test-nodejs.munford.mynethopper.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-nodejs
                port:
                  number: 80
